argocd/argocd-install/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress-internal
  namespace: argocd
  annotations:
  #   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  #   nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
  #   nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
  #   nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
  #   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.k3s.home
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server #[your argoCD server service name]
            port:
              name: http
